regressions/marans/SemanticErrors/badClassExt.ic
//output: Failed.

class A extends B {
}

class B {}